--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,8 +46,11 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-
+    implementation 'me.relex:circleindicator:2.1.6'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'io.github.chaosleung:pinview:1.4.4'
     implementation 'androidx.room:room-runtime:2.5.1'
     kapt "androidx.room:room-compiler:2.5.1"
+    implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'io.coil-kt:coil:2.3.0'
 }
